# spokewrench

./: .gitignore  LICENSE  README.md  environment.yml  meta.yml  pyproject.toml
.github/envs/: spokewrench.yml  test-rotate.yml
.github/workflows/: install.yml  main.yml  test-rotate-end-to-end.yml
rotary_utils/: external.py  repair.py  rotary_utils.py  rotate.py  stitch.py  utils.py
spokewrench/: assembly.py  external.py  repair.py  rotate.py  spokewrench.py  utils.py
tests/rotate/: test-rotate-end-to-end.sh
tests/rotate/expected/: test1b.fasta  test1c.fasta  test1c.tsv  test1e.copied.fasta  test1g.tsv  test2a.fasta  test2a.tsv  test2b.fasta  test2b.tsv  test2c.fasta  test2c.tsv  test2f.fasta  test2g.fasta  test2g.tsv  test3a.fasta  test3a.tsv  test4a.fasta  test4a.tsv  test4b.fasta  test4b.tsv  test4c.fasta  test4c.tsv
tests/rotate/input/: guide-fractions.tsv  guide-positions.tsv
